--- a/style.css
+++ b/style.css
@@ -890,7 +890,7 @@ ul.sub-menu li a {
     width: 100%;
     top: 0;
     left: 0;
-    z-index: -1;
+    /* z-index: -1; */
 }
 
 #slider-area .owl-item img {
@@ -1225,6 +1225,12 @@ a.btn-service:hover {
     color: #555555;
 }
 
+@media (max-width: 724px) {
+    .contact-title p {
+        width: 100%;
+    }
+}
+
 .contact-container {
     display: flex;
     align-items: center;
@@ -1369,6 +1375,14 @@ a.btn-service:hover {
     background-repeat: no-repeat;
     background-attachment: fixed;
 
+}
+
+@media (max-width: 450px) {
+    .parallax-about-page {
+    width: 100%;
+    height: 80vh;
+    background: var(--secondary);
+    }
 }
 
 
